# esiaf_speech_emotion_recognition

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: basic_emotion_rec_config.yaml
esiaf_emotion_recognition/: emotion_rec_wrapper.py
launch/: esiaf_emotion_recognition.launch
scripts/: start_emotion_recognition.py
